--- a/app/styles/elements/_video.scss
+++ b/app/styles/elements/_video.scss
@@ -1,25 +1,19 @@
 //embed vimeo responsively with some recommended approaches
 //see: http://embedresponsively.com/
-
-@import '_base';
-
-$html-name-space:'.vimeo-container';
-
-#{$html-name-space} {
+.video {
   position:relative;
   padding-bottom:56.25%;
   height:0;
   overflow:hidden;
   max-width:100%;
+}
 
-  iframe,
-  object,
-  embed {
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-  }
-
+iframe,
+object,
+embed {
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
 }
