--- a/app/styles/view-specific/creator/timeline/_timeline.scss
+++ b/app/styles/view-specific/creator/timeline/_timeline.scss
@@ -51,10 +51,14 @@ $header-height:108px;
         content:' ';
         display:block;
         position: absolute;
-        left:20%;
-        width:10000px; /* Arbitrarily large */
+        left:50%;
+        right:0;
         height:$header-height;
         background: rgba(52,52,44,0.5);
+        margin-left:-200px;
+        @media (min-width:$screen-lg-min) {
+          margin-left:-400px;
+        }
       }
     }
 
@@ -188,8 +192,6 @@ $header-height:108px;
       }
     }
     .left-margin-offset {
-      position:relative;
-
       @media (min-width:$screen-lg-min) {
         margin-left: -16%;
         margin-right: 16%;
